--- a/src/src/pages/Home.css
+++ b/src/src/pages/Home.css
@@ -13,6 +13,7 @@
     padding-top: 7rem;
     padding-left: 2rem;
     font-size: 82px;
+    margin-bottom: 2rem;
     font-weight: 550;
 }
 
@@ -21,6 +22,15 @@
     font-size: 1.5rem;
     color: #566b8f;
 }
+
+.header-div h3 {
+  padding-left:2rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: #ffffff;
+  opacity: 90%;
+}
+
 
 .add-button {
     width: 4rem;
@@ -44,7 +54,7 @@
     border-radius: 25px;
     margin: 2rem;
     align-items: center;
-    text-align: center;
+    text-align: left;
 }
 
 
@@ -56,6 +66,13 @@
   border: none !important;
 }
   
+.native-input.sc-ion-input-md {
+  padding-left: 1rem !important;
+}
+
+.sc-ion-buttons-md-s ion-button {
+  padding-right: 1rem;
+}
   /* Modal content */
   ion-modal ion-content {
     padding: 16px;
@@ -67,12 +84,18 @@
     font-weight: bold;
   }
   
-  ion-modal ion-item ion-input,
+  ion-modal ion-item ion-input {
+    border-radius: 4px;
+    border: 1px solid #1a2944;
+    margin-bottom: 8px !important;
+
+  }
+
   ion-modal ion-item ion-textarea {
     border-radius: 4px;
     border: 1px solid #1a2944;
-    padding: 8px;
-    margin-bottom: 16px;
+    padding-left: 1rem !important;
+    margin-bottom: 8px !important;
   }
   
   /* Modal buttons */
